<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kikisnight.alfonnomojachurrodesde.MainActivity"
    android:background="@color/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/cabeceza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null">

            <ImageView
                android:id="@+id/usa_flag"
                android:layout_width="wrap_content"
                android:layout_height="255dp"
                android:src="@drawable/usa_flag"
                android:scaleType="fitStart" />

            <ImageView
                android:layout_width="160dp"
                android:layout_height="177dp"
                android:src="@drawable/alfon_lloro"
                android:id="@+id/alfon_lloro"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@android:color/transparent"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/diferencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoSinMojar"
            android:layout_margin="6dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/texto"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/recuadro">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:padding="4dp"
                android:background="@color/fondo">

                <ImageView
                    android:id="@+id/picPokeball"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/pokeball"/>
                <View
                    android:id="@+id/viewRalla3"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/recuadro"
                    android:layout_marginStart="4dp"/>

                <TextView
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/textoPokemon"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="6dp"
                    android:background="@color/recuadro"/>

                <TextView
                    android:id="@+id/textoPokemonsTiempo"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textoNoData"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/recuadro">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:padding="4dp"
                android:background="@color/fondo">

                <ImageView
                    android:id="@+id/picBixo"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/bixo"/>
                <View
                    android:id="@+id/viewRalla2"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/recuadro"
                    android:layout_marginStart="4dp"/>

                <TextView
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/textoBixo"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="6dp"
                    android:background="@color/recuadro"/>

                <TextView
                    android:id="@+id/textoBixoTiempo"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textoNoData"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/recuadro">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:padding="4dp"
                android:orientation="horizontal"
                android:background="@color/fondo">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/apollo11"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/recuadro"
                    android:layout_marginStart="4dp"/>

                <TextView
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/textoApollo11"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:background="@color/recuadro"/>

                <TextView
                    android:id="@+id/textoApollo11Tiempo"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textoNoData"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>